--- a/index.html
+++ b/index.html
@@ -1,32 +1,39 @@
+<!DOCTYPE html>
 <html>
+
 <head>
-   
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
- 
+    <title>Lesson 7 homework</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="homework N7 update">
+    <meta name="author" content="Ruslan Turceaninov">
+    <meta name="keywords" content="Grid bootstrap">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-        <link rel="stylesheet" href="styles.css">
-</head>
- <body>
+  <link rel="stylesheet" href="stiles.css">
+ </head>
+<body>
   <div class="container">
- <div class="row blue">
-   <div class="col-12  col-lg-6"></div>
-   <div class="col-12  col-lg-6"></div>
-   </div>
-  <div class="row orange">
-    <div class="col-12"></div> 
+              <p> <h1>Lesson 7 homework</h1> </p>
+        <div class="row blue">
+            <div class="col-12 col-lg-6"></div>
+            <div class="col-12 col-lg-6"></div>
+        </div>
+        <div class="row orange">
+            <div class="col-lg-12"></div>
+        </div>
+        <div class="row green">
+            <div class="col-12 col-lg-4"></div>
+            <div class="col-12 col-lg-4"></div>
+            <div class="col-12 col-lg-4"></div>
+        </div>
+        <div class="row red">
+            <div class="col-12 col-md-6 col-lg-3"></div>
+            <div class="col-12 col-md-6 col-lg-3"></div>
+            <div class="col-12 col-md-6 col-lg-3"></div>
+            <div class="col-12 col-md-6 col-lg-3"></div>
+        </div>
     </div>
-  <div class="row green"> 
-  <div class="col-12 col-lg-4"></div>
-  <div class="col-12 col-lg-4"></div>
-  <div class="col-12 col-lg-4"></div> 
-       </div>
-  <div class="row red">
-    <div class="col-12 col-md-6 col-lg-3"></div>
-    <div class="col-12 col-md-6 col-lg-3"></div>
-    <div class="col-12 col-md-6 col-lg-3"></div>
-    <div class="col-12 col-md-6 col-lg-3"></div>  
-   </div>
-</div>
-  </body>
-  </html>
+</body>
+</html>
+
